--- a/База_рекламаций/Навигация.html
+++ b/База_рекламаций/Навигация.html
@@ -32,19 +32,6 @@
             </ul>
         </li>
 
-        <!-- Вариант 1 - Выпадающее меню для "Аналитика" -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" href="#" id="analyticsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Аналитика
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="analyticsDropdown">
-                <li><a class="dropdown-item" href="{% url 'analytics:analytic' %}">Общая аналитика</a></li>
-                <li><a class="dropdown-item" href="{% url 'analytics:charts' %}">Графики и диаграммы</a></li>
-                <li><a class="dropdown-item" href="{% url 'analytics:trends' %}">Анализ трендов</a></li>
-                <li><a class="dropdown-item" href="{% url 'analytics:dashboard' %}">Дашборд</a></li>
-            </ul>
-        </li>
-
         <!-- Вариант 2 - Выпадающее меню для "Справки и отчеты" -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="{% url 'reports:references' %}" id="reportsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -58,15 +45,17 @@
             </ul>
         </li>
 
-        <!-- Вариант 2 - Выпадающее меню для "Аналитика" -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" href="{% url 'analytics:analytic' %}" id="analyticsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Аналитика
+        <!-- Вариант 3 РАБОЧИЙ - Выпадающее меню для "Справки и отчеты" -->
+        <li class="nav-item dropdown position-relative">
+            <a class="nav-link dropdown-toggle text-white" href="{% url 'reports:references' %}">
+                Справки и отчеты
             </a>
-            <ul class="dropdown-menu" aria-labelledby="analyticsDropdown">
-                <li><a class="dropdown-item" href="{% url 'analytics:analytic' %}">Общая аналитика</a></li>
-                <li><a class="dropdown-item" href="{% url 'analytics:charts' %}">Графики и диаграммы</a></li>
-                <li><a class="dropdown-item" href="{% url 'analytics:trends' %}">Анализ трендов</a></li>
+            <ul class="dropdown-menu position-absolute hover-dropdown">
+                <li><a class="dropdown-item" href="{% url 'reports:enquiry_period' %}">Справка по количеству сообщений</a></li>
+                <li><a class="dropdown-item" href="{% url 'reports:length_study' %}">Длительность исследования рекламаций</a></li>
+                <li><a class="dropdown-item" href="{% url 'reports:accept_defect' %}">Количество признанных рекламаций</a></li>
+                <li><a class="dropdown-item" href="{% url 'reports:db_search' %}">Поиск по базе рекламаций</a></li>
+                <li><a class="dropdown-item" href="{% url 'reports:date_pretence' %}">Даты уведомления по рекламациям</a></li>
             </ul>
         </li>
     </ul>
@@ -84,7 +73,7 @@
     </ul>
 </div>
 
-/* Улучшенные стили для выпадающего меню */
+<!-- Улучшенные стили для выпадающего меню  -->
 .navbar-nav .dropdown-menu {
     background-color: #417690;
     border: none;
@@ -104,3 +93,16 @@
 .navbar-nav .dropdown-divider {
     border-color: rgba(255,255,255,0.2);
 }
+
+<!-- Вариант 3 РАБОЧИЙ - стили -->
+<style>
+.hover-dropdown {
+    display: none;
+    top: 100%;
+    left: 0;
+}
+
+.nav-item:hover .hover-dropdown {
+    display: block;
+}
+</style>
